--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mysql2": "^3.4.3",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-magic-login": "^1.2.2",
     "reflect-metadata": "^0.1.13",
